# particulesSimulation

./: .gitignore  CMakeLists.txt  make.sh  make_test.sh
include/: math.hpp  partcule.hpp  physic.hpp  system.hpp
python/: app.py  config.py  foo.py  gui.py  main.py  tests.py
python/lib/plougame/: __init__.py  app.py  auxiliary.py  components.py  form.py  formatter.py  helper.py  interface.py  page.py  spec.py
python/lib/simulation/: __init__.py
python/ui/: app.json
src/: main.cpp  particule.cpp  physic.cpp  system.cpp  test.cpp
